@@ -75,11 +75,7 @@ void fat16::Set_Used_Sectors( Partition & partition )
 	
 bool fat16::Create( const Partition & new_partition, std::vector<OperationDetails> & operation_details )
 {
-	operation_details .push_back( OperationDetails( String::ucompose(
-								_("create new %1 filesystem"),
-								Utils::get_filesystem_string( GParted::FS_FAT16 ) ) ) ) ;
-	
-	if ( ! execute_command( "mkdosfs -F16 -v " + new_partition .get_path(), operation_details .back() .sub_details ) )
+	if ( ! execute_command( "mkdosfs -F16 -v " + new_partition .get_path(), operation_details ) )
 	{
 		operation_details .back() .status = OperationDetails::SUCCES ;
 		return true ;
