@@ -76,11 +76,7 @@ void fat32::Set_Used_Sectors( Partition & partition )
 
 bool fat32::Create( const Partition & new_partition, std::vector<OperationDetails> & operation_details )
 {
-	operation_details .push_back( OperationDetails( String::ucompose(
-								_("create new %1 filesystem"),
-								Utils::get_filesystem_string( GParted::FS_FAT32 ) ) ) ) ;
-	
-	if ( ! execute_command( "mkdosfs -F32 -v " + new_partition .get_path(), operation_details .back() .sub_details ) )
+	if ( ! execute_command( "mkdosfs -F32 -v " + new_partition .get_path(), operation_details ) )
 	{
 		operation_details .back() .status = OperationDetails::SUCCES ;
 		return true ;
