@@ -46,11 +46,7 @@ void hfs::Set_Used_Sectors( Partition & partition )
 
 bool hfs::Create( const Partition & new_partition, std::vector<OperationDetails> & operation_details )
 {
-	operation_details .push_back( OperationDetails( String::ucompose(
-								_("create new %1 filesystem"),
-								Utils::get_filesystem_string( GParted::FS_HFS ) ) ) ) ;
-	
-	if ( ! execute_command( "hformat " + new_partition .get_path(), operation_details .back() .sub_details ) )
+	if ( ! execute_command( "hformat " + new_partition .get_path(), operation_details ) )
 	{
 		operation_details .back() .status = OperationDetails::SUCCES ;
 		return true ;
