@@ -73,11 +73,7 @@ void reiserfs::Set_Used_Sectors( Partition & partition )
 	
 bool reiserfs::Create( const Partition & new_partition, std::vector<OperationDetails> & operation_details )
 {
-	operation_details .push_back( OperationDetails( String::ucompose(
-								_("create new %1 filesystem"),
-								Utils::get_filesystem_string( GParted::FS_REISERFS ) ) ) ) ;
-	
-	if ( ! execute_command( "mkreiserfs -f " + new_partition .get_path(), operation_details .back() .sub_details ) )
+	if ( ! execute_command( "mkreiserfs -f " + new_partition .get_path(), operation_details ) )
 	{
 		operation_details .back() .status = OperationDetails::SUCCES ;
 		return true ;
