@@ -1,3 +1,7 @@
+2006-06-17 Bart Hakvoort <hakvoort@cvs.gnome.org>
+	
+	* cleanups in the core and the fs'es (create)
+
 2006-06-04 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/GParted_Core.cc: removed 'EXPERIMENTAL' from move-message to
